# pico-secure-gpio-mirror

./: CMakeLists.txt  README.md  conanfile.py  info.json
.github/workflows/: main.yml
profiles/: rp2040.host.profile  rp2350-arm-s.host.profile
src/: CMakeLists.txt  flash.c  flash.h  main.c  portable8439.c  portable8439.h
